Rework workflow and add readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.http.port=8099
 quarkus.rest-client.actions_openapi_json.url=${BACKSTAGE_ORCHESTRATOR_URL:http://localhost:7007/api/orchestrator}
 quarkus.rest-client.notifications_openapi_yaml.url=${BACKSTAGE_NOTIFICATIONS_URL:http://localhost:7007/api/notifications}
 
-quarkus.rest-client.jira_openapi_json.url=http://localhost:8080
+quarkus.rest-client.jira_openapi_json.url=https://redhat-gfarache.atlassian.net/jira/servicedesk/projects/AO/queues/custom/1
 quarkus.openapi-generator.jira_openapi_json.auth.bearerAuth.bearer-token=${JIRA_BEARER_TOKEN:no-token}
 
 mp.messaging.incoming.kogito_incoming_stream.connector=quarkus-http
