--- a/src/main/resources/schemas/application-onboarding__JIRA_Info.json
+++ b/src/main/resources/schemas/application-onboarding__JIRA_Info.json
@@ -1,5 +1,5 @@
 {
-  "$id": "application-onboarding__JIRA_Info.json",
+  "$id": "classpath:/schemas/application-onboarding__JIRA_Info.json",
   "title": "Provide information about JIRA",
   "$schema": "http://json-schema.org/draft-07/schema#",
   "type": "object",
