--- a/application-onboarding/application-onboarding.sw.yaml
+++ b/application-onboarding/application-onboarding.sw.yaml
@@ -95,7 +95,7 @@ states:
     eventDataFilter:
       toStateData: .jiraResolveIssueResult
     timeouts:
-      eventTimeout: PT30S
+      eventTimeout: .jiraInfo.timeout
     compensatedBy: Close issue on JIRA due to Timeout
     transition: Check repository created
   - name: Check repository created
@@ -158,7 +158,7 @@ states:
           arguments:
             issueIdOrKey: .jiraCreateIssueResult.id
             transition:
-              id: .jiraGetTransitionResult.transitions[] | select(.name | contains("done")) | .id
+              id: .jiraGetTransitionResult.transitions[] | select(.name | contains("Closed")) | .id
             update:
               comment:
                 - add:
