--- a/application-onboarding/application.properties
+++ b/application-onboarding/application.properties
@@ -1,5 +1,6 @@
 quarkus.rest-client.notifications_openapi_yaml.url=${BACKSTAGE_NOTIFICATIONS_URL:https://backstage-backstage-backstage-system.apps.cluster-mmbl5.dynamic.redhatworkshops.io/api/notifications}
 
+jira_url=${JIRA_URL:https://redhat-gfarache.atlassian.net/}
 quarkus.rest-client.jira_openapi_json.url=https://redhat-gfarache.atlassian.net
 quarkus.openapi-generator.jira_openapi_json.auth.basicAuth.username=${JIRA_USERNAME}
 # See https://id.atlassian.com/manage-profile/security/api-tokens
@@ -7,6 +8,4 @@ quarkus.openapi-generator.jira_openapi_json.auth.basicAuth.password=${JIRA_API_T
 #quarkus.openapi-generator.jira_openapi_json.auth.bearerAuth.bearer-token=${JIRA_BEARER_TOKEN:no-token}
 
 
-# This property is used when sending the notification while waiting for Q&A
-jira_url=${JIRA_URL:https://redhat-gfarache.atlassian.net/}
-quarkus.log.category.\"org.apache.http\".level=DEBUG
+#quarkus.log.category.\"org.apache.http\".level=DEBUG
