--- a/application-onboarding/application.properties
+++ b/application-onboarding/application.properties
@@ -1,4 +1,4 @@
-quarkus.rest-client.notifications_openapi_yaml.url=${BACKSTAGE_NOTIFICATIONS_URL:https://backstage-backstage-backstage-system.apps.cluster-mmbl5.dynamic.redhatworkshops.io/api/notifications}
+quarkus.rest-client.notifications_openapi_yaml.url=${BACKSTAGE_NOTIFICATIONS_URL:https://backstage-backstage-backstage-system.apps.cluster-mlfgt.dynamic.redhatworkshops.io/api/notifications}
 
 jira_url=${JIRA_URL:https://redhat-gfarache.atlassian.net/}
 quarkus.rest-client.jira_openapi_json.url=https://redhat-gfarache.atlassian.net
